--- a/GoShopping/Info.plist
+++ b/GoShopping/Info.plist
@@ -2,53 +2,33 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
-			<key>CFBundleTypeIconFile</key>
-			<string>icons8-buying</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>com.icodeit.GoShopping.tblr</string>
-			</array>
 			<key>CFBundleTypeExtensions</key>
 			<array>
 				<string></string>
 			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>icons8-buying</string>
 			<key>CFBundleTypeIconFiles</key>
 			<array>
-				<string>icons8-buying</string>
+				<string>Icon.png</string>
 			</array>
 			<key>CFBundleTypeName</key>
 			<string>To buy items</string>
-			<key>LSHandlerRank</key>
-			<string>Owner</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
-		</dict>
-	</array>
-	<key>UTExportedTypeDeclarations</key>
-	<array>
-		<dict>
-			<key>UTTypeDescription</key>
-			<string>To buy items</string>
-			<key>UTTypeConformsTo</key>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>LSItemContentTypes</key>
 			<array>
-				<string>public.data</string>
+				<string>com.icodeit.GoShopping.tblr</string>
 			</array>
-			<key>UTTypeIdentifier</key>
-			<string>com.icodeit.GoShopping.tblr</string>
-			<key>UTTypeTagSpecification</key>
-			<dict>
-				<key>public.filename-extension</key>
-				<string>tblr</string>
-				<key>public.mime-type</key>
-				<string>application/tobuy</string>
-			</dict>
 		</dict>
 	</array>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -65,6 +45,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Set image for new to buy item</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Set image for new to buy item</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -98,16 +82,36 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>Set image for new to buy item</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Set image for new to buy item</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>To buy items</string>
+			<key>UTTypeIconFiles</key>
+			<array>
+				<string>Icon.png</string>
+			</array>
+			<key>UTTypeIdentifier</key>
+			<string>com.icodeit.GoShopping.tblr</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<string>tblr</string>
+				<key>public.mime-type</key>
+				<string>application/tobuy</string>
+			</dict>
+		</dict>
 	</array>
 </dict>
 </plist>
