--- a/GoShopping/GoShopping.entitlements
+++ b/GoShopping/GoShopping.entitlements
@@ -14,6 +14,10 @@
 	</array>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.icodeit.GoShopping</string>
+	</array>
 	<key>com.apple.security.device.camera</key>
 	<true/>
 	<key>com.apple.security.network.client</key>
